--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "compile": "npx hardhat compile",
+    "deploy": "npx hardhat run scripts/deploy.js --network polygonMumbai",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Emanuel Tesar",
