--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "compile": "npx hardhat compile",
     "deploy": "npx hardhat run scripts/deploy.js --network polygonMumbai",
+    "mint": "npx hardhat mint --address",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Emanuel Tesar",
