--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "compile": "npx hardhat compile",
     "deploy": "npx hardhat run scripts/deploy.js --network polygonMumbai",
     "mint": "npx hardhat mint --address",
+    "nft-meta": "npx hardhat token-uri --token-id",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Emanuel Tesar",
@@ -17,7 +18,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "ethers": "^5.7.1",
     "hardhat": "^2.11.2",
-    "node-fetch": "^3.2.10"
+    "node-fetch": "^2.6.7"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
