--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "compile": "npx hardhat compile",
-    "deploy": "npx hardhat run scripts/deploy.js --network polygonMumbai",
-    "mint": "npx hardhat mint --address",
-    "nft-meta": "npx hardhat token-uri --token-id",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "npx hardhat run scripts/deploy.ts --network polygonMumbai",
+    "nft-meta": "npx hardhat token-uri --token-id --network polygonMumbai",
+    "test": "npm run compile && TS_NODE_TRANSPILE_ONLY=1 npx hardhat test"
   },
   "author": "Emanuel Tesar",
   "license": "ISC",
@@ -16,12 +15,14 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@types/node-fetch": "^2.6.2",
     "ethers": "^5.7.1",
     "hardhat": "^2.11.2",
     "node-fetch": "^2.6.7"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "erc721a": "^4.2.3"
   }
 }
